profiles-ext/i-sadav#4447 inicio

--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Visual Novel JS</title>
-  <link rel="stylesheet" href="./core/app.css">
+  <link rel="stylesheet" href="./Core/app.css">
 
 </head>
 
